new components ready (no styling)

--- a/src/content/blog/serial.mdx
+++ b/src/content/blog/serial.mdx
@@ -1,23 +1,80 @@
 ---
-title: 'Serial Test Post'
-description: 'Testing the serial blog post'
-pubDate: 'March 15 2025'
-heroImage: '/blog-placeholder-4.jpg'
+title: 'A Week of Progress: Backend Sync and Frontend Updates'
+description: 'Recapping a productive sprint with the team, including meetings, tasks, and blockers.'
+pubDate: 'March 16 2025'
+heroImage: '/blog-placeholder-2.jpg'
 ---
 
-# Serial Test Post
+# A Week of Progress: Backend Sync and Frontend Updates
 
-This is a test post to verify plain-text parsing for the `Meeting` component.
+This past week has been a whirlwind of activity for our team. With the sprint in full swing, we’ve tackled bugs, synced up on backend priorities, and made strides on the frontend redesign. Here’s a rundown of what went down, complete with the highs, lows, and everything in between.
 
-- list1 
-- list 2
+## Syncing Up and Solving Problems
 
+Our week kicked off with a key meeting to align the backend team.
 
-sweguigduhufhauywegfiuhsdf
+Meeting: Prathamesh, Rahul, 4-5 PM, Backend Sync, Resolved Issues
 
-## Meeting Example
+It was a productive hour—Prathamesh and Rahul hashed out some lingering API concerns, and we left with a clear plan to address them. This set the tone for a focused sprint. 
 
-Here’s a sample meeting using the plain-text format:
+Of course, not everything went smoothly. We hit a snag mid-week that slowed us down.
 
-Meeting: Abhishek & Xampras, 4-6 PM, Marketing Meet to get more clients, Got a new project and new Client!
+Blocker: API downtime, Prathamesh
 
+The API outage threw a wrench in our testing schedule, but Prathamesh flagged it early, and we pivoted to other tasks while the ops team sorted it out.
+
+## Tasks in Motion
+
+On the development front, Rahul’s been grinding away at a pesky login issue.
+
+Task: Fix login bug, Rahul, In Progress
+
+It’s not fully resolved yet, but Rahul’s making steady headway. We’re hoping to wrap this up before the sprint ends.
+
+Meanwhile, I’ve taken on a smaller but necessary chore.
+
+ActionItem: Update README, Rahul, 2025-03-20
+
+The README’s been overdue for a refresh, and I’ve committed to getting it done by Thursday. It’s a small win, but it’ll keep our docs in sync with the codebase.
+
+## Team Updates and Milestones
+
+Friday’s stand-up gave us a chance to take stock.
+
+StandUpSummary: 2025-03-14, Backend Team, Resolved API issues
+
+The team reported that the API issues were finally behind us, thanks to some overnight heroics from the ops crew. It was a morale boost heading into the weekend.
+
+On the frontend, we’re seeing real progress too.
+
+Progress: Frontend redesign, 75%, Waiting on feedback
+
+The new design is about three-quarters done. We’ve got a solid prototype, but it’s on hold until the design team weighs in. Fingers crossed they love it as much as we do!
+
+## A Quick Tip
+
+Here’s something we learned the hard way this week.
+
+Callout: tip, Test this locally first
+
+Before pushing anything API-related, test it locally. That downtime could’ve been less painful if we’d caught it sooner.
+
+## Code in Action
+
+Speaking of testing, here’s a snippet Rahul used to debug the login issue.
+
+CodeSnippet: javascript, console.log('Hello');
+
+Okay, it’s not the actual fix (that’s still in progress!), but it’s a reminder to keep logging and checking as you go. Sometimes the simplest tools get you through.
+
+## Visual Progress
+
+Finally, here’s a peek at where the frontend’s headed.
+
+Image: /blog-placeholder-1.jpg, Dashboard, New design preview
+
+It’s shaping up nicely, right? Once we get that feedback, we’ll polish it up and ship it.
+
+---
+
+This week showed what we’re capable of when we pull together—glitches and all. Next up, we’ll wrap up these tasks and start prepping for the deployment push. Stay tuned!
