new components ready for demo

--- a/src/content/blog/serial.mdx
+++ b/src/content/blog/serial.mdx
@@ -41,13 +41,17 @@ The README’s been overdue for a refresh, and I’ve committed to getting it do
 
 Friday’s stand-up gave us a chance to take stock.
 
-StandUpSummary: 2025-03-14, Backend Team, Resolved API issues
+StandUpSummary: 2025-03-14, Backend Team, Resolved API issues 
 
 The team reported that the API issues were finally behind us, thanks to some overnight heroics from the ops crew. It was a morale boost heading into the weekend.
 
 On the frontend, we’re seeing real progress too.
 
-Progress: Frontend redesign, 75%, Waiting on feedback
+Progress: Planning, 15%, Waiting on feedback
+
+Progress: Frontend redesign, 55%, Waiting on feedback
+
+Progress: API checks are done, 90%, Waiting on feedback
 
 The new design is about three-quarters done. We’ve got a solid prototype, but it’s on hold until the design team weighs in. Fingers crossed they love it as much as we do!
 
@@ -78,3 +82,18 @@ It’s shaping up nicely, right? Once we get that feedback, we’ll polish it up
 ---
 
 This week showed what we’re capable of when we pull together—glitches and all. Next up, we’ll wrap up these tasks and start prepping for the deployment push. Stay tuned!
+
+
+```mermaid
+graph TD
+    A[Start] --> B{Is it working?}
+    B -->|Yes| C[Great!]
+    B -->|No| D[Debug]
+    D --> B
+```
+
+
+| Title          | Assignee | Status     |
+|----------------|----------|------------|
+| Fix login bug  | Rahul    | In Progress|
+| Update README  | Prathamesh | Done     |
