--- a/src/content/blog/serial.mdx
+++ b/src/content/blog/serial.mdx
@@ -2,7 +2,7 @@
 title: 'A Week of Progress: Backend Sync and Frontend Updates'
 description: 'Recapping a productive sprint with the team, including meetings, tasks, and blockers.'
 pubDate: 'March 16 2025'
-heroImage: '/blog-placeholder-2.jpg'
+heroImage: '/blog-placeholder-1.jpg'
 ---
 
 # A Week of Progress: Backend Sync and Frontend Updates
@@ -41,13 +41,17 @@ The README’s been overdue for a refresh, and I’ve committed to getting it do
 
 Friday’s stand-up gave us a chance to take stock.
 
-StandUpSummary: 2025-03-14, Backend Team, Resolved API issues 
+StandUpSummary: 2025-03-14, Backend Team, Resolved API issues and made progress on login bug and README update for the frontend redesign. the team is in good spirits heading into the weekend. i am happy with the progress we made this week. today we discussed the progress of the tasks and the blockers we faced. we also discussed the plan for the next week. yesterday we had
+
+
+StandUpSummary: 2025-03-15, Frontend Team, Fixed UI bugs, Updated designs, and made progress on the API checks. the team is in good spirits heading into the weekend. i am happy with the progress we made this week. today we discussed the progress of the tasks and the blockers we faced. we also discussed the plan for the next week. yesterday we had
+
 
 The team reported that the API issues were finally behind us, thanks to some overnight heroics from the ops crew. It was a morale boost heading into the weekend.
 
 On the frontend, we’re seeing real progress too.
 
-Progress: Planning, 15%, Waiting on feedback
+Progress: Planning, 45%, Waiting on feedback
 
 Progress: Frontend redesign, 55%, Waiting on feedback
 
@@ -97,3 +101,37 @@ graph TD
 |----------------|----------|------------|
 | Fix login bug  | Rahul    | In Progress|
 | Update README  | Prathamesh | Done     |
+| Update README  | Prathamesh | Done     |
+| Update README  | Prathamesh | Done     |
+| Update README  | Prathamesh | Done     |
+| Update README  | Prathamesh | Done     |
+| Update README  | Prathamesh | Done     |
+| Update README  | Prathamesh | Done     |
+
+
+----------------
+
+
+Milestone: 2025-03-17, App Launch, Released v1.0
+
+Shoutout: Rahul, Fixed login bug in record time
+
+Idea: Dark mode, High, Needs design input
+
+
+---------
+
+
+# Project Update: Sprint 3 Recap
+
+## Timeline of Events
+
+Timeline: Sprint 3 Milestones, fa-calendar Kickoff | Planned features and timeline, fa-check-square Code Freeze | Completed development, fa-play-circle Deployment | Released to staging, fa-bell Review | Team feedback collected
+
+## Key Action Items
+
+IconBullet: fa-lightbulb UI Enhancement | Propose dark mode toggle
+
+IconBullet: fa-list-alt Task Assignment | Update backlog with new tickets
+
+IconBullet: fa-handshake Collaboration | Sync with design team on assets
