--- a/src/content/blog/serial.mdx
+++ b/src/content/blog/serial.mdx
@@ -135,3 +135,7 @@ IconBullet: fa-lightbulb UI Enhancement | Propose dark mode toggle
 IconBullet: fa-list-alt Task Assignment | Update backlog with new tickets
 
 IconBullet: fa-handshake Collaboration | Sync with design team on assets
+
+ResourceCard: Astro Docs, https://docs.astro.build
+
+InteractiveTaskCard: Finish Docs, Complete API documentation by Friday
